--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.51.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.27.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
